--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "@angular/compiler": "^12.2.16",
     "@angular/core": "^12.2.16",
     "@angular/forms": "^12.2.16",
+    "@angular/localize": "^12.2.16",
     "@angular/platform-browser": "~12.2.16",
     "@angular/platform-browser-dynamic": "~12.2.16",
     "@angular/router": "^12.2.16",
+    "@ng-bootstrap/ng-bootstrap": "10.0.0",
     "@ngrx/effects": "^12.5.1",
     "@ngrx/router-store": "12.5.1",
     "@ngrx/store": "^12.5.1",
     "@ngrx/store-devtools": "^12.5.1",
+    "bootstrap": "^4.5.0",
     "intersection-observer": "^0.12.0",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.5.4",
