--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ngrx/store": "^12.5.1",
     "@ngrx/store-devtools": "^12.5.1",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
     "intersection-observer": "^0.12.0",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.5.4",
