--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "lint:styles": "stylelint src/**/*.scss"
+    "lint:styles": "stylelint src/**/*.scss",
+    "deploy": "yarn build:prod && firebase deploy"
   },
   "private": true,
   "dependencies": {
@@ -17,7 +18,6 @@
     "@angular/compiler": "^12.2.16",
     "@angular/core": "^12.2.16",
     "@angular/forms": "^12.2.16",
-    "@angular/localize": "^12.2.16",
     "@angular/platform-browser": "~12.2.16",
     "@angular/platform-browser-dynamic": "~12.2.16",
     "@angular/router": "^12.2.16",
