--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build:prod": "ng build --configuration=production",
     "test": "ng test",
     "lint": "ng lint",
+    "lint:fix": "ng lint --fix",
     "e2e": "ng e2e",
     "lint:styles": "stylelint src/**/*.scss",
     "deploy": "yarn build:prod && firebase deploy"
