--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint:fix": "ng lint --fix",
     "e2e": "ng e2e",
     "lint:styles": "stylelint src/**/*.scss",
+    "lint:styles:fix": "stylelint src/**/*.scss --fix",
     "deploy": "yarn build:prod && firebase deploy"
   },
   "private": true,
@@ -52,6 +53,8 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
+    "stylelint": "^14.7.1",
+    "stylelint-config-standard-scss": "^3.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.3.5"
