--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "build": "ng build",
     "build:prod": "ng build --configuration=production",
     "test": "ng test",
-    "lint": "ng lint",
+    "lint": "ng lint --max-warnings=0",
     "lint:fix": "ng lint --fix",
     "e2e": "ng e2e",
     "lint:styles": "stylelint src/**/*.scss",
     "lint:styles:fix": "stylelint src/**/*.scss --fix",
-    "deploy": "yarn build:prod && firebase deploy"
+    "deploy": "yarn lint && yarn lint:styles && yarn build:prod && firebase deploy"
   },
   "private": true,
   "dependencies": {
