--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "test": "ng test",
     "lint": "ng lint --max-warnings=0",
     "lint:fix": "ng lint --fix",
-    "e2e": "ng e2e",
+    "e2e:run:local": "yarn cypress run -C e2e/cypress.local.json -c watchForFileChanges=true",
+    "e2e:open:local": "yarn cypress open  -C e2e/cypress.local.json",
+    "e2e:run:prod": "yarn cypress run -C e2e/cypress.prod.json -c watchForFileChanges=true",
+    "e2e:open:prod": "yarn cypress open  -C e2e/cypress.prod.json",
     "lint:styles": "stylelint src/**/*.scss",
     "lint:styles:fix": "stylelint src/**/*.scss --fix",
     "deploy": "yarn lint && yarn lint:styles && yarn build:prod && firebase deploy"
@@ -51,6 +54,7 @@
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.28.2",
     "@typescript-eslint/parser": "4.28.2",
+    "cypress": "^9.5.4",
     "eslint": "^7.26.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -59,7 +63,6 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
     "stylelint": "^14.7.1",
     "stylelint-config-standard-scss": "^3.0.0",
     "ts-node": "~8.3.0",
