--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "test": "ng test",
     "lint": "ng lint --max-warnings=0",
     "lint:fix": "ng lint --fix",
-    "e2e:run:local": "yarn cypress run -C e2e/cypress.local.json -c watchForFileChanges=true",
-    "e2e:open:local": "yarn cypress open  -C e2e/cypress.local.json",
-    "e2e:run:prod": "yarn cypress run -C e2e/cypress.prod.json -c watchForFileChanges=true",
-    "e2e:open:prod": "yarn cypress open  -C e2e/cypress.prod.json",
+    "e2e:run:local": "yarn cypress run -C cypress.local.json -c watchForFileChanges=true --project e2e",
+    "e2e:open:local": "yarn cypress open  -C cypress.local.json --project e2e",
+    "e2e:run:prod": "yarn cypress run -C cypress.prod.json -c watchForFileChanges=true --project e2e",
+    "e2e:open:prod": "yarn cypress open  -C cypress.prod.json --project e2e",
     "lint:styles": "stylelint src/**/*.scss",
     "lint:styles:fix": "stylelint src/**/*.scss --fix",
     "deploy": "yarn lint && yarn lint:styles && yarn build:prod && firebase deploy"
