--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser": "~12.2.16",
     "@angular/platform-browser-dynamic": "~12.2.16",
     "@angular/router": "^12.2.16",
+    "@ngrx/component-store": "^12.5.1",
     "@ngrx/effects": "^12.5.1",
     "@ngrx/router-store": "12.5.1",
     "@ngrx/store": "^12.5.1",
